--- a/src/pages/professeur-login/professeur-login.html
+++ b/src/pages/professeur-login/professeur-login.html
@@ -14,16 +14,15 @@
 
 <ion-content padding>
 		<p>
-			<img src="assets/schooImg/schoolink_logo.jpg" class="slide-image"/>
+			<img src="assets/schooImg/schoolink_logo.png" class="slide-image"/>
 		</p>
 		<ion-list no-lines class="list">
 			<ion-item>
-	            <ion-input type="text" placeholder="Référence : DD88C4" class="input"></ion-input><br>
+				<ion-input type="text" [(ngModel)]="ref.reference" 
+				placeholder="CODE : DD88C4" class="input" text-center></ion-input><br>
 	        </ion-item>
 
-	        <ion-item>
-	            <ion-input type="password" placeholder="Mot de passe :  ********" class="input"></ion-input>
-	        </ion-item><br><br>
+	        <br><br>
 	        
         </ion-list>
 
@@ -32,10 +31,6 @@
 				<ion-icon name="lock"></ion-icon>
             	Connexion
         	</button><br>
-
-        	<button ion-button clear color="dark">
-	            Mot de passe oublié ?
-	        </button><br>
 		</p>
 			
 </ion-content>
