--- a/src/pages/professeur-liste-classe/professeur-liste-classe.html
+++ b/src/pages/professeur-liste-classe/professeur-liste-classe.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfesseurListeClassePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-toolbar color="primary">
@@ -14,19 +8,22 @@
 
 
 <ion-content padding>
-    <ion-list>
-	  <ion-item (click)="accederClasse()">
-	    <ion-avatar item-start>
-	      <img src="assets/img/ica-slidebox-img-4.png">
-	    </ion-avatar>
-	    <h2><b>Saint Jean de l'évangéliste</b></h2>
-	    <h3><b>Année Académique :</b> 2018 - 2019</h3>
-	    <h4><b>Classe : </b>4eme M8</h4>
-	    <h4><b>Matière : </b>Français</h4>
-	    <p><b>Nombre d'élèves : </b>33 ELèves</p>
-	    <button ion-button clear item-end>
-	    	<ion-icon name="arrow-dropright"></ion-icon>
-	    </button>
-	  </ion-item>
+    <ion-list  *ngIf="classes;else noClasses">
+			<ion-item *ngFor="let class of classes, let i= index" (click)="accederClasse(class.TYPE_PERIODE, i)">
+				<h2><b>{{ class.NOM_ECOLE }}</b></h2>
+				<h4><b>Classe : </b>{{ class.CLASSE + " " + class.TYPE_CLASSE}}</h4>
+				<h4><b>Matière : </b>{{ class.MATIERE }}</h4>
+				<h4><b>Coéfficient : </b>{{ class.COEFFICIENT }}</h4>
+				<button ion-button clear item-end>
+					<ion-icon name="arrow-dropright"></ion-icon>
+				</button>
+			</ion-item>
 	</ion-list>
+
+
+	<ng-template #noClasses>
+			<div>
+				<p text-center>Pas de classe</p>
+			</div>
+		</ng-template>
 </ion-content>
