--- a/src/pages/censeur-login/censeur-login.html
+++ b/src/pages/censeur-login/censeur-login.html
@@ -18,11 +18,11 @@
 		</p>
 		<ion-list no-lines class="list">
 			<ion-item>
-	            <ion-input type="text" placeholder="Référence : DD88C4" class="input"></ion-input><br>
+	            <ion-input type="text" placeholder="Email : aaaa@aaaa.com" class="input" [(ngModel)]="ref.email"></ion-input><br>
 	        </ion-item>
 
 	        <ion-item>
-	            <ion-input type="password" placeholder="Mot de passe :  ********" class="input"></ion-input>
+	            <ion-input type="password" placeholder="Mot de passe : ********" class="input" [(ngModel)]="ref.password"></ion-input>
 	        </ion-item><br><br>
         </ion-list>
 
