implementation login, sigin, profil parent(etape1), ajout de local notif

--- a/src/pages/censeur-notification/censeur-notification.html
+++ b/src/pages/censeur-notification/censeur-notification.html
@@ -6,8 +6,8 @@
     </ion-title>
   </ion-navbar>
 
-  <ion-toolbar no-border-top>
-    <ion-segment [(ngModel)]="MenuSeg" color="primary">
+  <ion-toolbar no-border-top color="primary">
+    <ion-segment [(ngModel)]="MenuSeg" color="light">
       <ion-segment-button value="allNotif">
         Tout
       </ion-segment-button>
