--- a/src/pages/parent-login/parent-login.html
+++ b/src/pages/parent-login/parent-login.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfesseurLoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-toolbar color="primary">
@@ -24,11 +18,11 @@
 		</p>
 		<ion-list no-lines class="list">
 			<ion-item>
-	            <ion-input type="email" placeholder="Email : aaaa@aaa.com"></ion-input><br>
+	            <ion-input type="email" placeholder="Email : aaaa@aaa.com" [(ngModel)]="ref.email"></ion-input><br>
 	        </ion-item>
 
 	        <ion-item>
-	            <ion-input type="password" placeholder="Mot de passe :  ********"></ion-input>
+	            <ion-input type="password" placeholder="Mot de passe :  ********" [(ngModel)]="ref.password"></ion-input>
 	        </ion-item><br><br>
         </ion-list>
 
