--- a/src/pages/censeur-notification/censeur-notification.html
+++ b/src/pages/censeur-notification/censeur-notification.html
@@ -46,7 +46,7 @@
               <ion-col text-center>
                   <button ion-button clear small color="primary" icon-start>
                       <ion-icon name="calendar"></ion-icon>
-                      {{ notif.date }}
+                      {{ notif.date  | relativeTimes }}
                     </button>
               </ion-col>
               <ion-col text-right>
@@ -86,7 +86,7 @@
               <ion-col text-center>
                   <button ion-button clear small color="primary" icon-start>
                       <ion-icon name="calendar"></ion-icon>
-                      {{ notif.date }}
+                      {{ notif.date | relativeTimes }}
                     </button>
               </ion-col>
               <ion-col text-right>
@@ -126,7 +126,7 @@
               <ion-col text-center>
                   <button ion-button clear small color="primary" icon-start>
                       <ion-icon name="calendar"></ion-icon>
-                      {{ notif.date }}
+                      {{ notif.date  | relativeTimes }}
                     </button>
               </ion-col>
               <ion-col text-right>
