--- a/src/pages/professeur-insert-note/professeur-insert-note.html
+++ b/src/pages/professeur-insert-note/professeur-insert-note.html
@@ -27,6 +27,7 @@
 							{{infoclasse.NOM_ECOLE}} <br>
 							{{infoclasse.CLASSE}} {{infoclasse.TYPE_CLASSE}} <br>
 							{{infoclasse.MATIERE}} <br>
+							{{typeNote}}
 						</ion-item-divider>
 				</ion-list>
 	    	<ion-row *ngFor="let eleve of eleves, let i= index">
