gotologinparentpage function implemente

--- a/src/pages/parent-sign-in/parent-sign-in.html
+++ b/src/pages/parent-sign-in/parent-sign-in.html
@@ -64,7 +64,7 @@
 	            	Inscription
 	        	</button><br>
 
-				<button ion-button clear color="dark">
+				<button ion-button clear color="dark" (click)="gotologinparentpage()">
             	J'ai déjà un compte.
 	        	</button>
 			</p>
